Fix width overflows on smaller screens

--- a/assets/sass/tutorial.scss
+++ b/assets/sass/tutorial.scss
@@ -11,6 +11,10 @@
     .tutorial-section-title {
       font-size: 35px;
     }
+
+    .paragraph p {
+        overflow-wrap: break-word;
+    }
   }
 
   .btn-edit {
